target_sources(PhysicsBasedAnimationToolkit_PhysicsBasedAnimationToolkit
    PUBLIC
    FILE_SET api
    FILES
    "AabbKdTreeHierarchy.h"
    "AabbRadixTreeHierarchy.h"
    "AxisAlignedBoundingBox.h"
    "BoundingVolumeHierarchy.h"
    "ClosestPointQueries.h"
    "DistanceQueries.h"
    "Geometry.h"
    "IntersectionQueries.h"
    "KdTree.h"
    "MeshBoundary.h"
    "Morton.h"
    "SpatialSearch.h"
    "OverlapQueries.h"
    "TetrahedralAabbHierarchy.h"
    "TriangleAabbHierarchy.h"
)
target_sources(PhysicsBasedAnimationToolkit_PhysicsBasedAnimationToolkit
    PRIVATE
    "AabbKdTreeHierarchy.cpp"
    "AabbRadixTreeHierarchy.cpp"
    "AxisAlignedBoundingBox.cpp"
    "BoundingVolumeHierarchy.cpp"
    "ClosestPointQueries.cpp"
    "DistanceQueries.cpp"
    "IntersectionQueries.cpp"
    "KdTree.cpp"
    "MeshBoundary.cpp"
    "Morton.cpp"
    "SpatialSearch.cpp"
    "OverlapQueries.cpp"
    "TetrahedralAabbHierarchy.cpp"
    "TriangleAabbHierarchy.cpp"
)

add_subdirectory(model)